# GP3Coursework

./: .gitignore  CMakeLists.txt  README.md
GP3Coursework/: GP3Coursework.sln
GP3Coursework/GP3Coursework/: GP3Coursework.vcxproj
GP3Coursework/GP3Engine/: BaseComponent.h  Box.h  Common.h  Components.h  Cube.cpp  Editor.cpp  GP3Engine.vcxproj  GP3Engine.vcxproj.filters  GameObject.cpp  GameObject.h  InputComponent.cpp  Object.h  OpenGL.cpp  OutlineMaterial.cpp  OutlineMaterial.h  RenderComponent.cpp  SavingData.cpp  Scene.h  Shader.cpp  Texture.h  ToonMaterial.h  Vertex.h  Window.cpp  rendercomponent.h
GP3Coursework/GP3Engine/Components/: Components.h  InputComponent.h
GP3Coursework/GP3Game/: GP2CourseWorkGame.h  GP3Game.vcxproj  GP3Game.vcxproj.filters  HoloRoomScene.h  main.cpp
GP3Engine/: CMakeLists.txt
GP3Engine/include/: Common.h  Cube.h  CubeTexture.h  FBXLoader.h  Game.h  GameObject.h  InputManager.h  KeyboardListener.h  Mesh.h  OpenGL.h  Plane.h  PlayerController.h  SavingData.h  Scene.h  ViewFrustumCulling.h
GP3Engine/include/Components/: InputComponent.h  RenderComponent.h
GP3Engine/src/: CubeTexture.cpp  Editor.cpp  FBXLoader.cpp  GameObject.cpp  InputManager.cpp  Object.cpp  OpenGL.cpp  PlayerController.cpp  SDL2.cpp  SavingData.cpp  Shader.cpp  Texture.cpp  ViewFrustumCulling.cpp  Window.cpp
GP3Engine/src/Components/: InputComponent.cpp  RenderComponent.cpp
assets/models/: Fireball.FBX  Holodome.FBX  SpaceFloor.FBX  TheRoom.FBX  iceball.fbx  iceball2.fbx  lander.fbx  snowFlake.FBX  walkerEvo.fbx
assets/scenes/: holoRoom.banana
assets/shaders/: DepthVS.glsl  quadFS.txt  quadVS.glsl  shadowMapFS.glsl  shadowMapVS.glsl  simpleColourFS.glsl  simpleColourVS.glsl  simpleFS.glsl  simplePostProcessFS.glsl  simpleVS.glsl  skyboxFS.glsl  skyboxVS.glsl  specularFS.glsl  specularVS.glsl  textureFS.glsl  textureShadowFS .glsl  textureShadowVS.glsl  textureVS.glsl  toonOutlineFS.glsl  toonOutlineVS.glsl  toonSpecularFS.glsl
assets/shaders/final Shaders/: pointLightFS.glsl  pointLightVS.glsl  textureSpecularFS.glsl  textureSpecularVS.glsl
beardEngine/: CMakeLists.txt
beardEngine/include/: Box.h  Common.h  Editor.h  KeyboardListener.h  LightSource.h  PlayerController.h  SDL2.h  Shader.h  Window.h
beardEngine/include/Components/: BaseComponent.h
beardEngine/src/: FileSystem.cpp  Object.cpp  OpenGL.cpp  PlayerController.cpp  ToonMaterial.cpp
cmake/: FindBullet.cmake  FindOpenAL.cmake
include/: Audio.h  BulletPhys.h  Cube.cpp  FireballComponent.h  GP3Game.h  GameInputComponent.h  GamePlayerController.h  IceballComponent.h  Lighting.h  Material.h  SpaceScene.h  physicsComponent.h
src/: Audio.cpp  BulletPhys.cpp  FireballComponent.cpp  GP2CourseWorkGame.cpp  GP3Game.cpp  GameInputComponent.cpp  GamePlayerController.cpp  HoloRoomScene.cpp  IceballComponent.cpp  Lighting.cpp  Material.cpp  SpaceScene.cpp  main.cpp  physicsComponent.cpp
