cmake_minimum_required (VERSION 2.8)
PROJECT (GP3Engine)

SET(CMAKE_PREFIX_PATH "$ENV{CMAKE_PREFIX_PATH}")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_Image REQUIRED)
FIND_PACKAGE(SDL2_TTF REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(FBX REQUIRED)

FILE(GLOB C_SRCS src/*.cpp src/components/*.cpp include/*.h include/components/*.h)
ADD_EXECUTABLE(GP3Engine ${C_SRCS})

INCLUDE_DIRECTORIES(GP3Engine include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR} ${FBX_INCLUDE_DIR})

#link libraries
TARGET_LINK_LIBRARIES(GP3Engine ${SDL2_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL2IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY} ${FBX_LIBRARY})